cluster/gitops/networking/cni-plugins/general-purpose/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: general-purpose-cni-plugin-installer
specs:
  - description: general-purpose-cni-plugin-installer
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: general-purpose-cni-plugin-installer
    egress:
      # k8s API to label node, preventing the pod from running forever
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
